# ledgers-postings

./: .gitignore  Cargo.toml  README.md
postings-repository/: Cargo.toml  compose-postgres.yml
postings-repository/migrations/2025-02-01-103045_create_tables/: up.sql
postings-repository/src/: lib.rs  schema.rs
postings-repository/src/models/: enums.rs  mod.rs
postings-repository/src/repository/: mod.rs
postings-repository/tests/: account_stmt_repository_test.rs  chart_of_account_repository_test.rs  common.rs  ledger_account_repository_test.rs  posting_line_repository_test.rs  posting_repository_test.rs
postings-repository/tests/fixtures/: account_stmt_dataset.sql  chart_of_account_dataset.sql  cleanup.sql  ledger_account_dataset.sql  posting_dataset.sql  posting_line_dataset.sql
postings-rest-server/: Cargo.toml
postings-service/: Cargo.toml
postings-service/src/: lib.rs
