[package]
name = "postings-repository"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version="0.4", features=["serde"]}
# bigdecimal = {version="0.3", features=["serde", "postgres"]}
rust_decimal = { version = "1", features = ["serde", "db-diesel-postgres"] }
diesel-derive-enum = {version="2.1.0", features=["postgres"]}

[dev-dependencies]
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
serial_test = "3.2.0"
# plus your chosen crates for 'rust_decimal' or 'diesel-derive-enum' if you want
